# thrive

./: .eslintignore  .eslintrc.js  .gitignore  AGENTS.md  Brewfile  Dockfile  Gemfile  LICENSE  PLAN.md  README.md  aptfile  devcontainer.json  mise.toml  mise.toml.hbs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  rename_projects.py  render.yaml  root.mise.toml
itests/: conftest.py  helpers.py  mise.toml  output.json  package.mise.toml  pyproject.toml  pytest_html_report.html
itests/api/: big_plans.test.py  chores.test.py  conftest.py  docs.test.py  habits.test.py  home.test.py  inbox_tasks.test.py  journals.test.py  life_plan.test.py  metrics.test.py  prm.test.py  projects.test.py  schedule.test.py  search.test.py  smart_lists.test.py  time_plans.test.py  todos.test.py  vacations.test.py  working_mem.test.py
itests/api/common/: __init__.py  contacts.test.py  notes.test.py  publish.test.py  tags.test.py  time_events_full_days_blocks.test.py  time_events_in_day_blocks.test.py  time_events_in_day_blocks_for_big_plans.test.py  time_events_in_day_blocks_for_inbox_tasks.test.py  time_events_in_day_blocks_for_projects.test.py
itests/connections/: __init__.py  docs.test.py  healthz.test.py
itests/entities/: big_plans.test.py  chores.test.py  conftest.py  docs.test.py  habits.test.py  inbox_tasks.test.py  journals.test.py  metrics.test.py  persons.test.py  projects.test.py  schedules.test.py  smart_list.test.py  test_big_plans.py  test_chores.py  test_docs.py  test_habits.py  test_inbox_tasks.py  test_journal.py  test_metrics.py  test_persons.py  test_projects.py  test_schedule.py  test_smart_lists.py  test_time_plans.py  test_vacations.py  time_plans.test.py  vacations.test.py  working_mem.test.py
itests/lifecycle/: change_password.test.py  close_account.test.py  conftest.py  create_workspace.test.py  login.test.py  logout.test.py  recover_password.test.py  test_close_account.py
itests/webui/: __init__.py
itests/webui/entities/: aspects.test.py  big_plans.test.py  chapters.test.py  chores.test.py  conftest.py  docs.test.py  goals.test.py  habits.test.py  home.test.py  inbox_tasks.test.py  journals.test.py  life_plan.test.py  metrics.test.py  milestones.test.py  persons.test.py  prm.test.py  projects.test.py  push_integrations.test.py  schedules.test.py  smart_list.test.py  time_plans.test.py  todos.test.py  vacations.test.py  visions.test.py  working_mem.test.py
itests/webui/lifecycle/: change_password.test.py  close_account.test.py  conftest.py  create_workspace.test.py  login.test.py  logout.test.py  recover_password.test.py
itests/webui/lifecycle/email-verification/: __init__.py  email_verification.test.py
itests/webui/lifecycle/email_verification/: __init__.py  conftest.py  email_verification.test.py
itests/webui/lifecycle/google/: __init__.py  close_account.test.py  conftest.py  create_workspace.test.py  helpers.py  login.test.py  logout.test.py
itests/webui/lifecycle/local/: __init__.py  change_password.test.py  close_account.test.py  conftest.py  create_workspace.test.py  login.test.py  logout.test.py  recover_password.test.py
src/alib/py/framework/: README.md  package.mise.toml  pyproject.toml
src/api/: Config.project  Dockerfile  README.md  package.mise.toml  pyproject.toml
src/api/jupiter/api/: __init__.py  config.py  exceptions.py  headers.py  jupiter.py  webapi_client.py
src/cli/: Config.project  Config.project.live  Dockerfile  README.md  mise.toml  package.mise.toml  pyproject.toml
src/cli/jupiter/cli/: config.py  jupiter.py  migrator.py  session_storage.py
src/core/: README.md  mise.toml  output.json  package.json  package.mise.toml  pyproject.toml  tsconfig.build.json  tsconfig.json
src/core/jupiter/: __init__.py
src/core/jupiter/core/: __init__.py  app-component.ts  app.py  app_version_decoder.py  backend_blend.py  component.py  config-client.ts  config-server.ts  config.py  crown_entity_support.py  docs_help.py  email_address.py  entity_summary.py  env.ts  fast_info_repository.py  features.py  features.ts  frontdoor.server.ts  global_properties.py  hosting.py  infer-sync-target.ts  infer_sync_targets.py  instance.py  instance.ts  named-entity-tag.ts  named_entity_tag.py  named_entity_tag_to_cls.py  recurring_task_due_at_day.py  recurring_task_due_at_month.py  recurring_task_gen_params.py  recurring_task_skip_rule.py  recurring_task_skip_rule.test.py  schedules.py  schedules.test.py  storage_engine.py  sync-target.ts  sync_target.py  timeline.py  timeline.test.py  timezone.test.py  (+3 more)
src/core/migrations/: alembic.postgres.ini  alembic.sqlite.ini  env.py
src/core/migrations/postgres/: env.py
src/core/migrations/sqlite/: env.py
src/core/migrations/versions/: 2022_02_24_20_33_reset_initial_migrations.py  2022_03_24_22_28_add_tables_for_slack_tasks.py  2022_10_22_19_02_add_tables_for_email_tasks.py  2023_04_21_00_08_drop_notion_tables.py  2023_04_22_16_29_drop_notion_link_uuid_columns.py  2023_06_01_14_43_add_all_the_user_and_auth_tables.py  2023_06_19_15_51_drop_key_columns.py  2023_07_01_23_34_add_feature_flags_column_to_workspace.py  2023_08_05_16_36_add_search_tables.py  2023_11_18_19_21_backfill_entities_that_were_archived_.py  2023_12_01_15_30_the_gen_tables.py  2023_12_23_18_22_fix_some_issues_with_gc_and_gen_logs.py  2024_01_03_00_46_create_journal_tables.py  2024_01_03_00_52_backfill_journal_collection.py  2024_03_16_22_12_create_working_mem_tables.py  2024_03_16_22_21_backfill_working_mem_collection.py  2024_03_22_22_39_add_parent_field_to_aspects.py  2024_03_24_09_28_create_the_root_aspect_and_assign_.py  2024_03_24_17_36_add_aspect_column_for_order_of_children.py  2024_03_24_17_49_backfill_children_for_aspect.py  2025_04_17_09_32_add_new_columns.py  (+99 more)
src/docs/: Dockerfile  mise.toml  mkdocs.yml  package.mise.toml  pyproject.toml
src/docs/material/: features.md  healthz.md  index.md  roadmap.md  tutorial.md
src/mcp/: Config.project  Dockerfile  README.md  package.mise.toml  pyproject.toml
src/webapi/srv/: Config.project  Dockerfile  package.mise.toml  pyproject.toml
(+3087 files in other folders)
