[project]
name = "jupiter"
version = "0.1.0"
description = "Thrive is a small tool for _life planning_."
authors = [{ name = "Horia Coman", email = "horia141@gmail.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
license = "MIT"

[project.urls]
Homepage = "https://get-thriving.com/"
Repository = "https://github.com/horia141/thrive"
Documentation = "https://docs.get-thriving.com/"

[tool.uv.workspace]
members = [
    "gen/py/webapi-client",
    "src/alib/py/framework",
    "src/webapi",
    "src/api",
    "src/mcp",
    "src/core",
    "src/docs",
    "src/cli",
    "itests",
]

[dependency-groups]
dev = [
    "yamllint>=1.36.2,<2",
    "pyflakes>=3.2.0,<4",
    "bandit>=1.8.3,<2",
    "pydocstyle>=6.3.0,<7",
    "vulture>=2.14,<3",
    "mypy>=1.18.0,<2",
    "black>=25.1.0,<26",
    "pytest>=8.3.5,<9",
    "pytest-html-reporter>=0.2.9,<0.3",
    "pillow>=11.1.0,<12",
    "httpie>=3.2.4,<4",
    "autoflake>=2.3.1,<3",
    "ruff>=0.4.0,<0.5",
    "watchfiles>=1.0.4,<2",
    "openapi-python-client>=0.24.1,<0.25",
    "codename>=1.1,<2",
    "pip-audit>=2.8.0,<3",
    "pylibyear>=0.3.4,<0.4",
    "pytest-retry>=1.7.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
