[project]
name = "jupiter-itests"
version = "0.1.0"
description = "Big integration tests"
authors = [{ name = "Mike Bestcat", email = "mike@get-thriving.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "jupiter-core",
    "jupiter-webapi-client",
    "pytest-playwright>=0.7.0,<0.8",
    "playwright>=1.51.0,<2",
]

[project.urls]
Homepage = "https://get-thriving.com"
Repository = "https://github.com/get-thriving/thrive"
Documentation = "https://docs.get-thriving.com"

[dependency-groups]
dev = []

[tool.uv]
package = false

[tool.uv.sources]
jupiter-core = { workspace = true }
jupiter-webapi-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
