[project]
name = "jupiter-cli"
version = "0.1.0"
description = "A CLI client for Thrive."
authors = [{ name = "Horia Coman", email = "horia141@gmail.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "jupiter-core",
    "rich>=13.9.4,<14",
    "simpleaudio>=1.0.4,<2",
    "beepy>=1.0.9,<2",
]

[project.urls]
Homepage = "https://get-thriving.com"
Repository = "https://github.com/horia141/thrive"
Documentation = "https://docs.get-thriving.com"

[dependency-groups]
dev = ["types-requests>=2.32.0,<3"]

[tool.uv]
package = false

[tool.uv.sources]
jupiter-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
