[project]
name = "jupiter-docs"
version = "0.1.0"
description = "Docs for Jupiter"
authors = [{ name = "Horia Coman", email = "horia141@gmail.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.6.9,<10",
]

[project.urls]
Homepage = "https://get-thriving.com/"
Repository = "<https://github.com/horia141/thrive>"
Documentation = "<https://docs.get-thriving.com>"

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
