[project]
name = "jupiter-webapi-srv"
version = "0.1.0"
description = "A Web RPC-ish API for Thrive."
authors = [{ name = "Mike Bestcat", email = "mike@get-thriving.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "jupiter-core",
    "jupiter-framework",
    "fastapi>=0.115.11,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "pydantic>=2.10.6,<3",
    "websockets>=15.0.1,<16",
    "gunicorn>=23.0.0,<24",
    "python-multipart>=0.0.20,<0.0.21",
    "apscheduler>=3.11.0,<4",
    "inflection>=0.5.1,<0.6",
    "wsproto>=1.2.0,<2",
    "aiodns>=3.2.0,<4",
]

[project.urls]
Homepage = "https://get-thriving.com"
Repository = "https://github.com/get-thriving/thrive"
Documentation = "https://docs.get-thriving.com"

[dependency-groups]
dev = ["types-requests>=2.32.0,<3"]

[tool.uv]
package = false

[tool.uv.sources]
jupiter-core = { workspace = true }
jupiter-framework = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
